Feat: add login.

--- a/backend/views/index.pug
+++ b/backend/views/index.pug
@@ -3,3 +3,7 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  form(action="/users/login", method="post")
+    input(type="text" name="username")
+    input(type="text" name="password")
+    button login
